ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: petclinic
  namespace: aaaa
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: petclinic.local.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: petclinic
          servicePort: 80
